# backend/docs/api.yaml
@@ -11,6 +11,8 @@ servers:
   - url: http://localhost:5000
 
 tags:
+  - name: User
+    description: All tasks regarding a user
   - name: Plants
     description: All tasks regarding plants
   - name: Sensors
@@ -18,125 +20,197 @@ tags:
 
 
 paths:
-  /plants:
+  /user/{username}:
     get:
-      summary: Returns all plants store in the databaseù
       tags:
-        - Plants
+      - User
+      summary: Return user data
+      description: This route will return a JSON object identifying the user that requested it, except for the password field. If the user doesn't exist, it will return a NOT_FOUND error message
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: The username of the user
       responses:
         '200':
-          description: The plants are successfully retrieved
+          description: A JSON object will the user data
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Plant'
-    post:
-      summary: Inserts a new plant
+                $ref: "#/components/schemas/UserNoPassword"
+        '404':
+          description: A NOT_FOUND error message
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/NOT_FOUND"
+              example:
+                {
+                  "type": "NOT_FOUND",
+                  "message": "User not found"
+                }
+    put:
       tags:
-        - Plants
+      - User
+      summary: Add a new plant to a user
+      description: This route will return an OK message if it was added successfully, a NOT_FOUND error message if the user doesn't exist, or a CONFLICT error message if the plant is already registered with that user
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: The username of the user
       requestBody:
-        description: The new plant that will be added
+        description: The data needed to construct a new plant object
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Plant'
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: the name of the plant
+                  example: Basel
+                description:
+                  type: string
+                  description: A short description of the plant
+                  example: Basel plant in the kitchen
+                sensor:
+                  type: array
+                  description: An array of sensor readings
+                  items:
+                    $ref: "#/components/schemas/Sensor"
+              required:
+                - name
+      responses:
+        200:
+          description: An OK message
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OK"
+              example:
+                {
+                  "type": "OK",
+                  "message": "Plant added"
+                }
+          
+        404:
+          description: A NOT_FOUND error message
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/NOT_FOUND"
+              example:
+                {
+                  "type": "NOT_FOUND",
+                  "message": "User not found"
+                }
+        409:
+          description: A CONFLICT error message
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CONFLICT"
+              example:
+                {
+                  "type": "CONFLICT",
+                  "message": "Plant  already exists"
+                }
+  /user:
+    post:
+      tags:
+        - User
+      summary: Create a new user
+      description: This route will return an OK message if it was added successfully  or a CONFLICT error message if the user already exists
+      requestBody:
+        description: The data needed to construct a new user object
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                  description: The username of the user
+                  example: cristian
+                password:
+                  type: string
+                  description: The password of the user. It will be hashed before adding it to the database
+                  example: cristian
+                plants:
+                  type: array
+                  description: An array of plants
+                  items:
+                    $ref: "#/components/schemas/Plant"
+              required:
+                - username
+                - password
       responses:
         '201':
-          description: The plant was succesfully added
+          description: An OK message
           content:
             application/json:
               schema:
-                  $ref: '#/components/schemas/Plant'
+                $ref: "#/components/schemas/OK"
+              example:
+                {
+                  "type": "OK",
+                  "message": "User created"
+                }
         '409':
-          description: The plant already exists
+          description: A CONFLICT error message
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"
-  /plants/{name}:
-    put:
-      summary: Adds a new sensor reading to a plant
-      tags:
-        - Plants
-      parameters:
-        - in: name
-          name: name
-          schema:
-            type: integer
-          required: true
-          description: The name of the plant  
-      requestBody:
-        description: The sensor reading that will be added
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Sensor'
-      responses:
-        '200':
-          description: The sensor was successfully added to the requested plant
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Plant'
-        '404':
-          description: The requested plant does not exist
-          schema:
-            $ref: '#/components/responses/NotFound'
-  /sensor/all/{name}:
-    get: 
-      summary: Gets all sensor reading for a plant
-      tags:
-        - Sensors
-      parameters:
-          - in: name
-            name: name
-            schema:
-              type: integer
-            required: true
-            description: The name of the plant
-      responses:
-          '200':
-            description: The sensors are successfully retrieved
-            content:
-              application/json:
-                schema:
-                  type: array
-                  items:
-                    $ref: '#/components/schemas/Sensor'
-          '404':
-            description: The requested plant does not exist
-            schema:
-              $ref: '#/components/schemas/Error'
-  /sensor/latest/{name}:
-    get: 
-      summary: Gets the latest sensor reading of a plant
-      tags:
-        - Sensors
-      parameters:
-          - in: name
-            name: name
-            schema:
-              type: integer
-            required: true
-            description: The name of the plant
-      responses:
-          '200':
-            description: The latest sensor data is successfully retrived
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/Sensor'
-          '404':
-            description: The requested plant does not exist
-            schema:
-              $ref: '#/components/schemas/Error'
-
+                $ref: "#/components/schemas/CONFLICT"
+              example:
+                {
+                  "type": "CONFLICT",
+                  "message": "User already exists"
+                }
+      
 components:
   schemas:
+    UserNoPassword:
+      type: object
+      properties:
+        username:
+          type: string
+          description: The username of the user
+          example: cristian
+        plants:
+          type: array
+          description: The owned plants
+          items:
+            $ref: '#/components/schemas/Plant'
+      required:
+        - username
+        - password
+    User:
+      type: object
+      properties:
+        username:
+          type: string
+          description: The username of the user
+          example: cristian
+        password:
+          type: string
+          description: The password of the user. It will be hashed
+          example: cristian
+        plants:
+          type: array
+          description: The owned plants
+          items:
+            $ref: '#/components/schemas/Plant'
+      required:
+        - username
+        - password
     Sensor:
       type: object
       properties:
@@ -179,18 +253,41 @@ components:
             $ref: '#/components/schemas/Sensor'
       required:
         - name
-    ErrorType:
+    MessageType:
       type: string
-      enum: [NOT_FOUND, CONFLICT]
+      enum: [OK, NOT_FOUND, CONFLICT]
       example: NOT_FOUND
-    Error:
+    NOT_FOUND:
       type: object
       properties:
         type:
-          description: The error type
-          $ref: "#/components/schemas/ErrorType"
+          description: The message type
+          $ref: "#/components/schemas/MessageType"
+          example: NOT_FOUND
         message:
           description: The error message
           type: string
           example: The resource is not found
+    OK:
+      type: object
+      properties:
+        type:
+          description: The message type
+          $ref: "#/components/schemas/MessageType"
+          example: OK
+        message:
+          description: The message
+          type: string
+          example: Resource added
+    CONFLICT:
+      type: object
+      properties:
+        type:
+          description: The message type
+          $ref: "#/components/schemas/MessageType"
+          example: CONFLICT
+        message:
+          description: The message
+          type: string
+          example: The resource already exists
   
