# backend/src/routes/user.ts
@@ -1,55 +1,62 @@
 import express, { Request, Response } from 'express'
-import { MessageType, IMessage } from '../models/message'
-import { IPlant } from '../models/plant'
-import { ISensor } from '../models/sensors'
-import { IUser, User } from '../models/user'
+import { MessageType, IMessage, not_found, success, conflict } from '../models/message'
+import { IPlant, Plant } from '../models/plant'
+import { User } from '../models/user'
 
 const router = express.Router()
 
-router.get("/user/:name", async (req: Request, res: Response) => {
-    const name = req.params.name
+router.get("/user/:username", async (req: Request, res: Response) => {
+    const name = req.params.username
 
-    const user = await User.findOne({username: name})
+    const user = await User.findOne({ username: name })
 
-    if(!user) {
-        let error: IMessage = {
-            type: MessageType.NOT_FOUND,
-            message: "User not found"
-        }
-        return res.status(404).json(error)
+    if (!user) {
+        return res.status(404).json(not_found("User not found"))
     }
     else {
-        return res.status(200).json(user)
+        return res.status(200).json({
+            username: user.username,
+            plants: user.plants
+        })
     }
-
 })
 
-router.post("/user",async (req: Request, res:Response) => {
+router.post("/user", async (req: Request, res: Response) => {
     const { username, password, plants } = req.body
 
-
-    if(await User.exists({username: username})) {
-        let error: IMessage = {
-            type: MessageType.CONFLICT,
-            message: `The plant ${username} already exists`
-        }
-        return res.status(409).json(error)
+    if (await User.exists({ username: username })) {
+        return res.status(409).json(conflict(`User already exists`))
     }
     else {
         const user = new User({
             username: username,
             password: password,
-            plants: plants ? plants : []
+            plants: plants
         })
-
-        const success: IMessage = {
-            type: MessageType.OK,
-            message: "User created"
-        }
-    
         await user.save()
-        return res.status(201).json(success)
+        return res.status(201).json(success("User created"))
     }
 })
 
-export {router as userRouter }
+router.put("/user/:username", async (req: Request, res: Response) => {
+    const username = req.params.username
+    const {name, description, sensor} = req.body
+
+    if (!await User.exists({ username: username })) {
+        return res.status(404).json(not_found("User not found"))
+    }
+    else {
+        const user = await User.findOne({ username: username })
+        if (user!.plants.find(plant => plant.name == name))
+            return res.status(409).json(conflict("Plant already exists"))
+        user!.plants.push(new Plant({
+            name: name,
+            description: description,
+            sensor: sensor
+        }))
+        user!.save()
+        return res.status(200).json(success("Plant added"))
+    }
+})
+
+export { router as userRouter }
